Apply updates from cookiecutter

--- a/conf/supervisord-dev.conf
+++ b/conf/supervisord-dev.conf
@@ -25,4 +25,4 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
 serverurl = unix://.supervisor.sock
-prompt = cookiecutter_pyapp_test
+prompt = cookiecutter-pyapp-test
