--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,8 @@ setenv =
 passenv =
     HOME
     PYTEST_ADDOPTS
+    dev: DEBUG
+    dev: SENTRY_DSN
     GUNICORN_CERTFILE
     GUNICORN_KEYFILE
 deps =
