Add Elasticsearch service
Depends on https://github.com/hypothesis/cookiecutters/pull/97.

Use the cookiecutter's two `services.yml` includes to add an
Elasticsearch service to Docker Compose and GitHub Actions.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,13 @@ jobs:
       - run: tox -e lint
   Tests:
     runs-on: ubuntu-latest
+    services:
+      elasticsearch:
+        image: hypothesis/elasticsearch:latest
+        ports:
+        - 9202:9200
+        env:
+          discovery.type: single-node
     steps:
       - uses: actions/checkout@v3
       - name: Install Python
@@ -84,6 +91,13 @@ jobs:
       - run: tox -e coverage
   Functests:
     runs-on: ubuntu-latest
+    services:
+      elasticsearch:
+        image: hypothesis/elasticsearch:latest
+        ports:
+        - 9202:9200
+        env:
+          discovery.type: single-node
     steps:
       - uses: actions/checkout@v3
       - name: Install Python
