--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
-version: "3.9"
 services:
-  web:
-    build: .
+  elasticsearch:
+    image: hypothesis/elasticsearch:latest
     ports:
-      - "8000:8000"
-  redis:
-    image: "redis:alpine"
+      - '127.0.0.1:9202:9200'
+    environment:
+      - discovery.type=single-node
