Rename to test-pyapp

--- a/conf/supervisord-dev.conf
+++ b/conf/supervisord-dev.conf
@@ -3,7 +3,7 @@ nodaemon=true
 silent=true
 
 [program:app]
-command=python3 -m cookiecutter_pyapp_test
+command=python3 -m test_pyapp
 stdout_events_enabled=true
 stderr_events_enabled=true
 stopsignal=KILL
@@ -25,4 +25,4 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
 serverurl = unix://.supervisor.sock
-prompt = cookiecutter-pyapp-test
+prompt = test-pyapp
