--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -5,7 +5,7 @@ logfile=/dev/null
 logfile_maxbytes=0
 
 [program:app]
-command=python3 -m cookiecutter_pyapp_test
+command=python3 -m test_pyapp
 stdout_events_enabled=true
 stderr_events_enabled=true
 stdout_logfile=NONE
