--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ skip_install = true
 setenv =
     PYTHONUNBUFFERED = 1
     OBJC_DISABLE_INITIALIZE_FORK_SAFETY = YES
-    # Make `import cookiecutter_pyapp_test` work in `make shell`.
+    # Make `import test_pyapp` work in `make shell`.
     dev: PYTHONPATH = .
 passenv =
     HOME
@@ -29,14 +29,14 @@ commands_pre =
     pip-sync requirements/{env:TOX_ENV_NAME}.txt --pip-args '--disable-pip-version-check'
 commands =
     dev: {posargs:supervisord -c conf/supervisord-dev.conf}
-    format: black cookiecutter_pyapp_test tests bin
-    format: isort --atomic cookiecutter_pyapp_test tests bin
-    checkformatting: black --check cookiecutter_pyapp_test tests bin
-    checkformatting: isort --quiet --check-only cookiecutter_pyapp_test tests bin
-    lint: pylint cookiecutter_pyapp_test bin
+    format: black test_pyapp tests bin
+    format: isort --atomic test_pyapp tests bin
+    checkformatting: black --check test_pyapp tests bin
+    checkformatting: isort --quiet --check-only test_pyapp tests bin
+    lint: pylint test_pyapp bin
     lint: pylint --rcfile=tests/pyproject.toml tests
-    lint: pydocstyle cookiecutter_pyapp_test tests bin
-    lint: pycodestyle cookiecutter_pyapp_test tests bin
+    lint: pydocstyle test_pyapp tests bin
+    lint: pycodestyle test_pyapp tests bin
     tests: coverage run -m pytest --failed-first --new-first --no-header --quiet {posargs:tests/unit/}
     functests: pytest --failed-first --new-first --no-header --quiet {posargs:tests/functional/}
     coverage: -coverage combine
