--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,11 @@ setenv =
     dev: NEW_RELIC_APP_NAME = {env:NEW_RELIC_APP_NAME:test-pyapp}
     dev: NEW_RELIC_ENVIRONMENT = {env:NEW_RELIC_ENVIRONMENT:dev}
     tests,functests: PYTEST_PLUGINS = tests.pytest_plugins.factory_boy
+    dev: ALEMBIC_CONFIG = {env:ALEMBIC_CONFIG:conf/alembic.ini}
+    SQLALCHEMY_SILENCE_UBER_WARNING=1
+    dev: DATABASE_URL = {env:DATABASE_URL:postgresql://postgres@localhost:17977/postgres}
+    tests: DATABASE_URL = {env:UNITTESTS_DATABASE_URL:postgresql://postgres@localhost:17977/test_pyapp_tests}
+    functests: DATABASE_URL = {env:FUNCTESTS_DATABASE_URL:postgresql://postgres@localhost:17977/test_pyapp_functests}
     # Make `import test_pyapp` work in `make shell`.
     dev: PYTHONPATH = .
 passenv =
@@ -32,9 +37,13 @@ deps =
     pip-sync-faster
 depends =
     coverage: tests
+allowlist_externals =
+    tests,functests: sh
 commands_pre =
     pip-sync-faster requirements/{env:TOX_ENV_NAME}.txt --pip-args '--disable-pip-version-check'
 commands =
+    tests: sh bin/create-db test_pyapp_tests
+    functests: sh bin/create-db test_pyapp_functests
     dev: {posargs:supervisord -c conf/supervisord-dev.conf}
     format: black test_pyapp tests bin
     format: isort --atomic test_pyapp tests bin
