Apply updates from cookiecutter

--- a/requirements/lint.in
+++ b/requirements/lint.in
@@ -3,6 +3,6 @@ pip-sync-faster
 -r tests.txt
 -r functests.txt
 toml # Needed for pydocstyle to support pyproject.toml.
-pylint
+pylint>=3.0.0
 pydocstyle
 pycodestyle
