--- a/requirements/lint.in
+++ b/requirements/lint.in
@@ -2,7 +2,4 @@ pip-tools
 pip-sync-faster
 -r tests.txt
 -r functests.txt
-toml # Needed for pydocstyle to support pyproject.toml.
-pylint>=3.0.0
-pydocstyle
-pycodestyle
+ruff
