--- a/tox.ini
+++ b/tox.ini
@@ -37,14 +37,11 @@ commands_pre =
     pip-sync-faster requirements/{env:TOX_ENV_NAME}.txt --pip-args '--disable-pip-version-check'
 commands =
     dev: {posargs:supervisord -c conf/supervisord-dev.conf}
-    format: black test_pyapp tests bin
-    format: isort --atomic test_pyapp tests bin
-    checkformatting: black --check test_pyapp tests bin
-    checkformatting: isort --quiet --check-only test_pyapp tests bin
-    lint: pylint test_pyapp bin
-    lint: pylint --rcfile=tests/pyproject.toml tests
-    lint: pydocstyle test_pyapp tests bin
-    lint: pycodestyle test_pyapp tests bin
+    format: ruff check --select I --fix test_pyapp tests bin
+    format: ruff format test_pyapp tests bin
+    checkformatting: ruff check --select I test_pyapp tests bin
+    checkformatting: ruff format --check test_pyapp tests bin
+    lint: {posargs:ruff check test_pyapp tests bin}
     tests: python -m pytest --cov --cov-report= --cov-fail-under=0 --failed-first --new-first --no-header --quiet {posargs:tests/unit/}
     functests: python -m pytest --failed-first --new-first --no-header --quiet {posargs:tests/functional/}
     coverage: coverage combine
